# BusTimetableDatabase

./: .antigravity.yml  .antigravityrule  .gitignore  .gitmodules  00_full_update.bat  README.adoc  README.md  pyproject.toml  requirements.txt  settings.gradle.kts  task.md
.agent/: AGENT.md
.agent/rules/: 01_workflow.md  03_github.md  coding.md  git.md  github.md  perf.md  prj.md
.agent/workflows/: cleanup.md  commit.md  create-issue.md  create-pr.md  init.md  push.md  resume.md  save.md  start.md  update-issue.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: task_tracking.md
.github/workflows/: android_library.yml  check_database.yml  generate.yml  generate_v1.yml  generate_v2.yml  generate_v3.yml  json_to_sqlite.yml  pre_cache_v3.yml  release.yml  release_v1.yml  release_v2.yml  release_v3.yml  test.yml
ci/test/: Dangerfile
client/android/: INTEGRATION_GUIDE.md  README.md  VERSION_MANAGEMENT.md  build.gradle.kts
database/: companies.json
database/kanachu/: systems.json
database/神奈川中央交通/: busstops.json
docs/progress/: task.md
docs/v1/: README.md
docs/v2/: README.md
docs/v3/: README.md
release/: hash.txt  info.json
script/: .gitignore  check.py  check_all.py  check_route.py  check_timetable.py  create_template.py  edit_json.py  execute.bat  generate.py  generate_info.py  get_hash_from_json.py  hash.py  json_to_sqlite.py  update_route.py  web_access.py
script/common/: __init__.py  convert.py  edit_json.py  hash.py  web_access.py
scripts/: copy-to-app-workspace.ps1
work/: busstops.json  generate_template.py
(+38104 files in other folders)
